rename pins and update PCF for compatibility with both Upduino and TinyFPGA

--- a/Upduino-3.1/makefile
+++ b/Upduino-3.1/makefile
@@ -14,4 +14,4 @@ sim:
 #todo improve sim target, allow specifing which testbench to use with -t option
 
 visualize: build
-	nextpnr-ice40 --json hardware.json --pcf pins.pcf --asc hardware.asc --up5k --package sg48 --gui
+	nextpnr-ice40 --json hardware.json --pcf upduino.pcf --asc hardware.asc --up5k --package sg48 --gui
